Shooting, moving, enemies spawn, game variables

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/lodash.throttle": "^4.1.7",
     "typescript": "^5.0.2",
     "vite": "^4.4.0"
+  },
+  "dependencies": {
+    "lodash.throttle": "^4.1.1"
   }
 }
