--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "vite": "^4.4.0"
   },
   "dependencies": {
-    "lodash.throttle": "^4.1.1"
+    "@netlify/functions": "^1.6.0",
+    "@types/express": "^4.17.17",
+    "express": "^4.18.2",
+    "lodash.throttle": "^4.1.1",
+    "serverless-http": "^3.2.0"
   }
 }
