--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@netlify/functions": "^1.6.0",
     "@types/express": "^4.17.17",
+    "ably": "^1.2.41",
     "express": "^4.18.2",
     "lodash.throttle": "^4.1.1",
     "serverless-http": "^3.2.0"
