--- a/package.json
+++ b/package.json
@@ -9,17 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@netlify/plugin-lighthouse": "^4.1.1",
     "@types/lodash.throttle": "^4.1.7",
     "typescript": "^5.0.2",
     "vite": "^4.4.0"
   },
   "dependencies": {
     "@netlify/functions": "^1.6.0",
-    "@types/express": "^4.17.17",
     "ably": "^1.2.41",
-    "express": "^4.18.2",
-    "lodash.throttle": "^4.1.1",
-    "serverless-http": "^3.2.0"
+    "lodash.throttle": "^4.1.1"
   }
 }
