--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 [functions]
-  directory = "api"
-
+  external_node_modules = ["express"]
+  node_bundler = "esbuild"
 [[redirects]]
+  force = true
   from = "/api/*"
-  to = "/.netlify/functions/:splat"
   status = 200
+  to = "/.netlify/functions/api/:splat"
