--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "vite": "^4.4.0"
   },
   "dependencies": {
-    "@netlify/functions": "^1.6.0",
-    "ably": "^1.2.41",
+    "ably": "^2.3.1",
+    "axios": "^1.7.6",
     "express": "^4.19.2",
+    "http": "^0.0.1-security",
     "lodash.throttle": "^4.1.1",
-    "serverless-http": "^3.2.0",
     "socket.io": "^4.7.5"
   }
 }
