--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^4.4.0"
   },
   "dependencies": {
+    "@types/express": "^4.17.21",
     "ably": "^2.3.1",
     "axios": "^1.7.6",
     "express": "^4.19.2",
