--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite build && node api/index.js",
+    "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "vite build && node api/index.js"
@@ -18,6 +18,8 @@
     "@types/express": "^4.17.21",
     "ably": "^2.3.1",
     "axios": "^1.7.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "lodash.throttle": "^4.1.1",
