--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build && node api/index.js",
     "preview": "vite preview",
     "start": "vite build && node api/index.js"
   },
