--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build && node api/index.js",
-    "preview": "vite preview",
-    "start": "vite build && node api/index.js"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@types/lodash.throttle": "^4.1.7",
